# flask_ml_pipeline

./: Dockerfile  README.md  pyproject.toml
app_files/: hello.py  model.pickle  model.py
notebook/: Decision Tree-based Regression model for 50 Startup.ipynb
src/app/: app.py  model.pickle  model.py
