[tool.poetry]
name = "flask_ml_pipeline"
version = "0.1.0"
description = ""
authors = ["r-matsuzaka <matsuzakaryo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
pandas = "^1.2.3"
scikit-learn = "^0.24.1"
numpy = "^1.20.2"
gsutil = "^4.60"
matplotlib = "^3.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
